# ocr_invoice_pipeline_mistral

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
components/: pdf_viewer.py
pipeline/: database.py  embeddings.py  extract.py  ocr.py  rag.py  schemas.py
tests/: test_database.py  test_embeddings.py  test_extract.py  test_rag.py  test_schemas.py  test_smoke.py
